--- a/SeSac_PracticeTableView/Base.lproj/Main.storyboard
+++ b/SeSac_PracticeTableView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vXL-qG-Idf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="C8O-MY-ZR2">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -20,7 +20,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="집중 모드" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yB2-La-ETV">
-                                    <rect key="frame" x="165" y="11.666666666666664" width="63.333333333333343" height="21"/>
+                                    <rect key="frame" x="165" y="11.666666666666664" width="63" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -385,6 +385,119 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HIi-sY-Zx8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1475.5725190839694" y="-58.450704225352112"/>
+        </scene>
+        <!--Magazine Info Table View Controller-->
+        <scene sceneID="qp1-2U-vvP">
+            <objects>
+                <tableViewController id="C8O-MY-ZR2" customClass="MagazineInfoTableViewController" customModule="SeSac_PracticeTableView" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="TtT-Yd-6WW">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="z1g-Km-a6r">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="52"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n1z-ba-QNa">
+                                    <rect key="frame" x="175.66666666666666" y="15.666666666666664" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HAA-rv-msj">
+                                    <rect key="frame" x="0.0" y="50" width="393" height="2"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="2" id="Lc9-8R-lIc"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="n1z-ba-QNa" firstAttribute="centerX" secondItem="z1g-Km-a6r" secondAttribute="centerX" id="5ke-fM-q8m"/>
+                                <constraint firstItem="HAA-rv-msj" firstAttribute="leading" secondItem="z1g-Km-a6r" secondAttribute="leading" id="8yK-Dn-MTl"/>
+                                <constraint firstAttribute="bottom" secondItem="HAA-rv-msj" secondAttribute="bottom" id="8yu-Mt-zbe"/>
+                                <constraint firstItem="n1z-ba-QNa" firstAttribute="centerY" secondItem="z1g-Km-a6r" secondAttribute="centerY" id="GHt-Mw-YhK"/>
+                                <constraint firstAttribute="trailing" secondItem="HAA-rv-msj" secondAttribute="trailing" id="sQf-mr-yrQ"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MagazineInfoTableViewCell" rowHeight="364" id="mBa-dU-f2G" customClass="MagazineInfoTableViewCell" customModule="SeSac_PracticeTableView" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="102" width="393" height="364"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mBa-dU-f2G" id="4yS-aC-qxv">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="364"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCc-Jt-mly">
+                                            <rect key="frame" x="30" y="20" width="333" height="324"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QeZ-V8-6TX">
+                                                    <rect key="frame" x="0.0" y="0.0" width="333" height="222.66666666666666"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7QE-Kt-wN0">
+                                                    <rect key="frame" x="0.0" y="237.66666666666669" width="283" height="20.333333333333314"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wmx-4r-Yma">
+                                                    <rect key="frame" x="0.0" y="268" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ed7-qt-0p2">
+                                                    <rect key="frame" x="291" y="288" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="ed7-qt-0p2" secondAttribute="bottom" constant="15" id="BRf-pU-iEx"/>
+                                                <constraint firstItem="QeZ-V8-6TX" firstAttribute="leading" secondItem="rCc-Jt-mly" secondAttribute="leading" id="FTE-mY-fWa"/>
+                                                <constraint firstItem="QeZ-V8-6TX" firstAttribute="top" secondItem="rCc-Jt-mly" secondAttribute="top" id="RFu-Iw-bwW"/>
+                                                <constraint firstAttribute="trailing" secondItem="QeZ-V8-6TX" secondAttribute="trailing" id="UBc-du-P2D"/>
+                                                <constraint firstAttribute="trailing" secondItem="7QE-Kt-wN0" secondAttribute="trailing" constant="50" id="c0K-SX-Jww"/>
+                                                <constraint firstAttribute="trailing" secondItem="ed7-qt-0p2" secondAttribute="trailing" id="eSF-nv-nrO"/>
+                                                <constraint firstItem="wmx-4r-Yma" firstAttribute="top" secondItem="ed7-qt-0p2" secondAttribute="top" constant="-20" id="pOa-JO-JTi"/>
+                                                <constraint firstItem="7QE-Kt-wN0" firstAttribute="top" secondItem="QeZ-V8-6TX" secondAttribute="bottom" constant="15" id="qIN-OY-Vz4"/>
+                                                <constraint firstItem="7QE-Kt-wN0" firstAttribute="leading" secondItem="rCc-Jt-mly" secondAttribute="leading" id="rB5-Ey-muY"/>
+                                                <constraint firstItem="wmx-4r-Yma" firstAttribute="top" secondItem="7QE-Kt-wN0" secondAttribute="bottom" constant="10" id="v48-vo-xex"/>
+                                                <constraint firstItem="wmx-4r-Yma" firstAttribute="leading" secondItem="rCc-Jt-mly" secondAttribute="leading" id="yqR-Ah-XHw"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="rCc-Jt-mly" firstAttribute="top" secondItem="4yS-aC-qxv" secondAttribute="top" constant="20" id="5eK-gZ-VNa"/>
+                                        <constraint firstAttribute="bottom" secondItem="rCc-Jt-mly" secondAttribute="bottom" constant="20" id="7Qh-1u-pn2"/>
+                                        <constraint firstAttribute="trailing" secondItem="rCc-Jt-mly" secondAttribute="trailing" constant="30" id="KtY-Tz-bR7"/>
+                                        <constraint firstItem="rCc-Jt-mly" firstAttribute="leading" secondItem="4yS-aC-qxv" secondAttribute="leading" constant="30" id="yYU-oW-gpl"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateLabel" destination="ed7-qt-0p2" id="HAU-C5-RdS"/>
+                                    <outlet property="magazineImageView" destination="QeZ-V8-6TX" id="8oQ-rN-9IR"/>
+                                    <outlet property="subtitleLabel" destination="wmx-4r-Yma" id="bBZ-Tv-bvo"/>
+                                    <outlet property="titleLabel" destination="7QE-Kt-wN0" id="ep6-LR-iHV"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="C8O-MY-ZR2" id="mh7-a4-2c9"/>
+                            <outlet property="delegate" destination="C8O-MY-ZR2" id="5Dk-NW-oqj"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="headerBottomLineView" destination="HAA-rv-msj" id="53H-8H-2vX"/>
+                        <outlet property="headerLabel" destination="n1z-ba-QNa" id="VYb-yY-9KO"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LbA-Pv-Ovp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2316.7938931297708" y="-58.450704225352112"/>
         </scene>
     </scenes>
     <resources>
