--- a/SeSac_PracticeTableView/CityInfo/CityCollectionViewCell.xib
+++ b/SeSac_PracticeTableView/CityInfo/CityCollectionViewCell.xib
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CityCollectionViewCell" id="gTV-IL-0wX" customClass="CityCollectionViewCell" customModule="SeSac_PracticeTableView" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="109" height="167"/>
+            <rect key="frame" x="0.0" y="0.0" width="109" height="162"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="109" height="167"/>
+                <rect key="frame" x="0.0" y="0.0" width="109" height="162"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K0L-s9-ash">
@@ -24,7 +24,7 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dqA-I0-OgT">
-                        <rect key="frame" x="0.0" y="109" width="109" height="58"/>
+                        <rect key="frame" x="0.0" y="109" width="109" height="53"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cfa-ei-O9y">
                                 <rect key="frame" x="5" y="10" width="43.666666666666664" height="20"/>
@@ -45,7 +45,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgv-8U-snM">
-                                <rect key="frame" x="10" y="35" width="89" height="18"/>
+                                <rect key="frame" x="10" y="35" width="89" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -68,7 +68,6 @@
                             <constraint firstAttribute="trailing" secondItem="lgv-8U-snM" secondAttribute="trailing" constant="10" id="Wrc-Fp-lwG"/>
                             <constraint firstAttribute="trailing" secondItem="93A-qK-lDO" secondAttribute="trailing" id="ZIc-lD-Owt"/>
                             <constraint firstItem="93A-qK-lDO" firstAttribute="bottom" secondItem="gCK-kX-VyK" secondAttribute="bottom" id="cZD-XC-Q2J"/>
-                            <constraint firstAttribute="bottom" secondItem="lgv-8U-snM" secondAttribute="bottom" constant="5" id="gcv-qi-K13"/>
                             <constraint firstItem="gCK-kX-VyK" firstAttribute="leading" secondItem="Cfa-ei-O9y" secondAttribute="trailing" constant="5" id="lqS-Ro-cnB"/>
                             <constraint firstItem="Cfa-ei-O9y" firstAttribute="bottom" secondItem="gCK-kX-VyK" secondAttribute="bottom" id="oiB-rY-js7"/>
                             <constraint firstItem="Cfa-ei-O9y" firstAttribute="top" secondItem="gCK-kX-VyK" secondAttribute="top" id="tIi-ev-KmP"/>
@@ -88,15 +87,16 @@
                 <constraint firstAttribute="trailing" secondItem="K0L-s9-ash" secondAttribute="trailing" id="gQe-Hx-Nja"/>
                 <constraint firstItem="K0L-s9-ash" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="oTf-Lr-GIC"/>
             </constraints>
-            <size key="customSize" width="109" height="167"/>
+            <size key="customSize" width="109" height="162"/>
             <connections>
+                <outlet property="cityBottomView" destination="dqA-I0-OgT" id="pck-nH-1bc"/>
                 <outlet property="cityImageView" destination="K0L-s9-ash" id="LBF-d8-LtI"/>
                 <outlet property="descriptionLabel" destination="lgv-8U-snM" id="hQU-kQ-BCV"/>
                 <outlet property="englishNameLabel" destination="93A-qK-lDO" id="hrq-qy-Nd3"/>
                 <outlet property="koreaNameLabel" destination="Cfa-ei-O9y" id="aFA-55-WCS"/>
                 <outlet property="pipeView" destination="gCK-kX-VyK" id="uxd-FR-RmZ"/>
             </connections>
-            <point key="canvasLocation" x="135.1145038167939" y="47.535211267605639"/>
+            <point key="canvasLocation" x="135.1145038167939" y="45.774647887323944"/>
         </collectionViewCell>
     </objects>
     <resources>
