--- a/SeSac_PracticeTableView/CityInfo/City.storyboard
+++ b/SeSac_PracticeTableView/CityInfo/City.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kcL-gN-BX6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Nji-VF-Iif">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6KV-6y-F1X">
-                                <rect key="frame" x="0.0" y="156" width="393" height="662"/>
+                                <rect key="frame" x="0.0" y="156" width="393" height="613"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="V8c-p0-0Vx">
                                     <size key="itemSize" width="128" height="128"/>
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tqY-YS-ZJ3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8542.7480916030527" y="-58.450704225352112"/>
+            <point key="canvasLocation" x="9469.4656488549608" y="-58.450704225352112"/>
         </scene>
         <!--City Step2 Collection View Controller-->
         <scene sceneID="aNN-ht-wS9">
@@ -259,7 +259,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZbW-Eg-BLU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9619.0839694656479" y="-69.014084507042256"/>
+            <point key="canvasLocation" x="10545.801526717556" y="-69.014084507042256"/>
         </scene>
         <!--Detail Advertise View Controller-->
         <scene sceneID="GTU-AM-gsz">
@@ -286,7 +286,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k1W-BV-y7V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="10854" y="285"/>
+            <point key="canvasLocation" x="11779.389312977099" y="284.50704225352115"/>
         </scene>
         <!--Attractions View Controller-->
         <scene sceneID="t3C-Af-tYu">
@@ -313,12 +313,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tog-fn-PDT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="10864" y="-422"/>
+            <point key="canvasLocation" x="11790.076335877862" y="-422.53521126760563"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--홈-->
         <scene sceneID="J5n-UK-Dr2">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kcL-gN-BX6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="홈" image="house" catalog="system" id="nwx-RL-FzS"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="oer-CP-Lus">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -331,10 +332,60 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EEx-Ce-81Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7616.0305343511445" y="-58.450704225352112"/>
+            <point key="canvasLocation" x="8550" y="-69"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="bQg-b5-VvH">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Nji-VF-Iif" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SM4-1Q-zdv">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="kcL-gN-BX6" kind="relationship" relationship="viewControllers" id="3ee-ZU-CsE"/>
+                        <segue destination="Wla-KT-RTJ" kind="relationship" relationship="viewControllers" id="GfE-wc-Uh5"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ENW-oq-Rij" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7086" y="894"/>
+        </scene>
+        <!--채팅-->
+        <scene sceneID="3Hc-hd-7a3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wla-KT-RTJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="채팅" image="message.fill" catalog="system" id="aaL-XM-L9Y"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QEA-gy-1jK">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9v3-5m-2HY" kind="relationship" relationship="rootViewController" id="XqM-cC-5IT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Gi-0H-wWW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8549" y="1607"/>
+        </scene>
+        <!--TravelTalk-->
+        <scene sceneID="OfR-sq-Npu">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TravelTalk" id="9v3-5m-2HY" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="Z9x-ai-Kx8"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mZM-eO-muz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9294" y="1606"/>
         </scene>
     </scenes>
     <resources>
+        <image name="house" catalog="system" width="128" height="104"/>
+        <image name="message.fill" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
