feat: 각 세그먼트 밸류값 마다 필터링된 영화관 위치 생성

--- a/SeSac_PracticeTableView/NearCinema/NearCinema.storyboard
+++ b/SeSac_PracticeTableView/NearCinema/NearCinema.storyboard
@@ -27,6 +27,9 @@
                                     <segment title="First"/>
                                     <segment title="Second"/>
                                 </segments>
+                                <connections>
+                                    <action selector="changedSegment:" destination="Y6W-OH-hqX" eventType="valueChanged" id="Aqp-ZF-2Xk"/>
+                                </connections>
                             </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
